@@ -25,7 +25,7 @@ class plgSearchCategories extends JPlugin
 	/**
 	 * @return array An array of search areas
 	 */
-	function onSearchAreas()
+	function onContentSearchAreas()
 	{
 		static $areas = array(
 		'categories' => 'Categories'
@@ -44,7 +44,7 @@ class plgSearchCategories extends JPlugin
 	 * @param string ordering option, newest|oldest|popular|alpha|category
 	 * @param mixed An array if restricted to areas, null if search all
 	 */
-	function onSearch($text, $phrase='', $ordering='', $areas=null)
+	function onContentSearch($text, $phrase='', $ordering='', $areas=null)
 	{
 		$db		= &JFactory::getDbo();
 		$user	= &JFactory::getUser();
@@ -52,7 +52,7 @@ class plgSearchCategories extends JPlugin
 		$searchText = $text;
 
 		if (is_array($areas)) {
-			if (!array_intersect($areas, array_keys($this->onSearchAreas()))) {
+			if (!array_intersect($areas, array_keys($this->onContentSearchAreas()))) {
 				return array();
 			}
 		}
