@@ -23,7 +23,7 @@ class plgSearchNewsfeeds extends JPlugin
 	/**
 	 * @return array An array of search areas
 	 */
-	function onSearchAreas()
+	function onContentSearchAreas()
 	{
 		static $areas = array(
 		'newsfeeds' => 'Newsfeeds'
@@ -41,14 +41,14 @@ class plgSearchNewsfeeds extends JPlugin
 	 * @param string ordering option, newest|oldest|popular|alpha|category
 	 * @param mixed An array if the search it to be restricted to areas, null if search all
 	 */
-	function onSearch($text, $phrase='', $ordering='', $areas=null)
+	function onContentSearch($text, $phrase='', $ordering='', $areas=null)
 	{
 		$db		= JFactory::getDbo();
 		$user	= JFactory::getUser();
 		$groups	= implode(',', $user->authorisedLevels());
 
 		if (is_array($areas)) {
-			if (!array_intersect($areas, array_keys($this->onSearchAreas()))) {
+			if (!array_intersect($areas, array_keys($this->onContentSearchAreas()))) {
 				return array();
 			}
 		}
