@@ -25,7 +25,7 @@ class plgSearchWeblinks extends JPlugin
 	/**
 	 * @return array An array of search areas
 	 */
-	function onSearchAreas() {
+	function onContentSearchAreas() {
 		static $areas = array(
 			'weblinks' => 'Weblinks'
 			);
@@ -42,7 +42,7 @@ class plgSearchWeblinks extends JPlugin
 	 * @param string ordering option, newest|oldest|popular|alpha|category
 	 * @param mixed An array if the search it to be restricted to areas, null if search all
 	 */
-	function onSearch($text, $phrase='', $ordering='', $areas=null)
+	function onContentSearch($text, $phrase='', $ordering='', $areas=null)
 	{
 		$db		= &JFactory::getDbo();
 		$user	= &JFactory::getUser();
@@ -51,7 +51,7 @@ class plgSearchWeblinks extends JPlugin
 		$searchText = $text;
 
 		if (is_array($areas)) {
-			if (!array_intersect($areas, array_keys($this->onSearchAreas()))) {
+			if (!array_intersect($areas, array_keys($this->onContentSearchAreas()))) {
 				return array();
 			}
 		}
