@@ -34,6 +34,7 @@ $ -> Language fix or change
  ^ Merge patch [#20330] mod_status show / hide params (Phil Snell).
  ^ Added chaining support to JMail.
  ^ Renamed extension events to onExtension*
+ ^ Renamed search events to onContentSearch*
 
 3-May-2010 Jean-Marie Simonet
 # Fixed [20314] (Thanks Phil Snell). Added/consolidated some strings in com_messages
